# quivrs

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  feeds.json  feeds.ron  feeds.toml  justfile  kite_feeds.json  rustfmt.toml  shell.nix  todo
.sqlx/: query-0309cd6fe3782f1a2b5c4da7a288bf0ee7d4f93b58b229494ecf568fff665e76.json  query-071b92ffa1a4b128379edc30dd4ce2d0d61717acbfc04efa2f413f9fb5bc5a1e.json  query-0741132dc7567a6d075e39ff85419ebbf08d8be87907be821a51f05aafde1bab.json  query-08c0ae064011df936148d32206fb79f5f1ad8943272505159c80c3ab204d091d.json  query-122858f143bd9209db02527c67a37b268e59bc0b9159f9f9afd1287d80e46150.json  query-1731ab73ddc91c795a4c7db56cf16ab878883e8bdc148e614ef2831b682067cd.json  query-2cbd7b9aebe7bebc606d53e84b4708dbf10684fb00badd0b6a4d5ef10ab123ca.json  query-2ee470baae871dadb9d199cc30ad8062c4606f8768dc5ee8430d48baa6ef2392.json  query-33ed6e14472e3c4dee5d99aa8eec2166abdd5d1ff51f98db3b016d22f8989691.json  query-3506e4c11a02b028752f726cb0ba32ecaa5fc12c2d9caaf73141e137b8802654.json  query-35cbe1bb6894290fec1fdc39083fcb71260bf58814493ab82206eb420dde881f.json  query-3a09968b82bfd363fc7b63ff7d0d32e41bcfc0d093479e165913fc534833981c.json  query-3a990c55bd3cdef3bb0a19246fa7fc8660c3d503f49782a6a59a19bb010ad7ef.json  query-479468c9a499a70fadfb6f32d964dfcfc20b67ba013dd1ba2320cc2c13cec02b.json  query-51c70f2d97937863fa30116c3e5af2f85b8f9b13e62debff16ef9bcc9b1f0794.json  query-5d5bfc9810e07537f118f5e62dcbcb370fe26ff89714d5ccc56ecccef058a4bc.json  query-5f44c3fe12cd943d30368fa356b3fd578469da164c85be5181810eb00f39facc.json  query-761d5ff8b722e9c5bbd64797921fc82e5d24a8e2e144a2b3136845bbdcc7144f.json  query-7f115326ba304b8d866d3b7692cc976aa688affbdba37c3e036bac559c78695a.json  query-80e74d79dcc463a62da2c8e2c5d2a3ffe8b91244236016194cd21b521e9ce167.json  query-83d33323aa5cef9f7f23b016c0cc9132c83c71bc1837702e04b352bbce2cfab4.json  query-88f75ab7b65c4020f885e38ca76c212ae02015ded756bff01fe547d760e43cbb.json  query-8b10ffccf4d0dac8da9904f7b31cff4ce1845b26b652e2a269f5d2d4610449b1.json  query-94086deede567c04d964b21fed68a512e2227d1966587935e5df2ca5e16f195d.json  query-947a7bd84b7753473b46671a04feaeddde80f19e9a66327d49fe266e014535b2.json  query-94b1d04cef4b69b76b6608639e591536037f7b07d5f5afc0c4cf250b94b69707.json  query-98b3b97bb4bab69e07755a1506de67e335183d4e514f16d6e49cd96d2dffbfe8.json  query-9f08ef410efc0c8010fd8bb865ed0df6ad98fc9f950b89b90a73d300715044b9.json  query-a1ac93f86840f5f3ec95e34aa6bd1ae39716a71702d4b35e3f3e13c83bde0601.json  query-a4f6d1c7ebe66edbd16fcec1aad3c0bdb1bf44f032510adbf0e7c6c1b590d028.json  query-a6b3b4d539e933c6a187dd3633f667e8a4a43901f953429e9b507cd40246c4db.json  query-a9155be9be985315b5f7c45e6fabdeb9177717f56053f3527e9a55f4eb39c200.json  query-a9761adde98eb5d92c3f2f5d08984f01428d2a627584febfc765214255939650.json  query-aaaf37792c8f59e4e1f4fc68c88b9411940044f44785643ea4fe1abc3dee3066.json  query-ab65dd95352ad29fb34d67b11f2535be03d54e47ae7d6863163734f71deb51b6.json  query-ab671cfdaa8ecacd3eec89c8c829be936c84f8da1e64ffb18b9bf9657f540ea1.json  query-b0f31eeec1e22ca82a78bdc4dcfcfc092af29a02748b05f48a22909f2d9f8cae.json  query-b4a5f440ec2f5c903df97779fdf741c3e22ce98f29c48c41d1570a879ef90f5e.json  query-b55c931ca14cc32c9e20167f211f341c27d48ecf0da30449f8ab3c992451213f.json  query-b60eb07cecaa3958c79cb0460a3e2258c799203bd15fc34a9b786df11dae40fe.json  (+8 more)
assets/: main.css
migrations/: 0001_initial.sql  20260526_initial_schema.sql  20260526_initial_schema.surql
scripts/: kagi_feeds.jq  kagi_filters.json
src/: db.rs  feed.rs  llm_functions.rs  main.rs  miniflux.rs  serve.rs
src/common/: mod.rs
src/server/: articles.rs  auth.rs  database.rs  embeddings.rs  feed.rs  llm_functions.rs  mod.rs  parse_feed.rs  parse_website.rs
src/server/embeddings/: category.rs  importance.rs  mod.rs  region.rs  sentiment.rs  tests.rs
src/server/parsers/: feeds.rs  mod.rs  social.rs  web_search.rs  websites.rs
src/server/parsers/websites/: content.rs  date.rs  images.rs  mod.rs  summary.rs  tags.rs  tests.rs  title.rs
src/shared/: mod.rs  server_functions.rs  theme.rs
src/web/: article.css  article.rs  components.rs  mod.rs  sidebar.rs
