[package]
name = "quivrs"
version = "0.2.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.9", features = ["fullstack", "router"] }

tracing = "0.1.44"
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }
chrono = { version = "0.4.45", default-features = false, features = [
    "clock",
    "serde",
    "wasmbind",
] }
itertools = "0.14.0"
strum = { version = "0.28.0", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.118"
web-sys = "=0.3.95"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dotenvy = "0.15.7"
tracing-subscriber = "0.3.23"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
reqwest = { version = "0.13.4", default-features = false, features = [
    "default-tls",
    "json",
    "brotli",
    "cookies",
] }
rayon = "1.12.0"
url = "2.5.8"
tokio = { version = "1.52.3", features = ["fs", "rt-multi-thread"] }
axum = { version = "0.8.9", default-features = false, features = [
    "tokio",
    "tracing",
    "http1",
] }
tower-http = { version = "0.6.11", features = [
    "fs",
    "async-compression",
    "compression-deflate",
    "compression-gzip",
] }
futures = "0.3.32"
fastembed = { version = "5.16.0", default-features = false, features = [
    "hf-hub-rustls-tls",
    "ort-download-binaries-rustls-tls",
] }
sha2 = "0.11.0"
duckduckgo = "0.3.3"

# Website parsing
serde_json = "1.0.150"
ron = "0.12.1"
roxmltree = "0.21.1"
url-normalize = "0.1.1"
html-escape = "0.2.13"
ammonia = "4.1.2"
dom_smoothie = "0.18.0"
scraper = "0.27.0"
regex = "1.12.3"

# Database
sqlx = { version = "0.9.0", default-features = false, features = [
    "chrono",
    "json",
    "macros",
    "migrate",
    "runtime-tokio",
    "sqlite",
    "uuid",
] }
libsqlite3-sys = "0.37.0"
sqlite-vec = "0.1.9"

[features]
default = []
server = ["dioxus/server"]
web = ["dioxus/web"]

# [lints.rust]
# unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
too-many-lines = "allow"
cast-possible-wrap = "allow"
cast-possible-truncation = "allow"
cast_precision_loss = "allow"
volatile_composites = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"
