[package]
name = "quivrs"
version = "0.1.1"
edition = "2024"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
anyhow = "1.0.102"
tokio = { version = "1.52.3", features = ["fs", "macros", "rt-multi-thread"] }
reqwest = { version = "0.13.4", default-features = false, features = [
    "default-tls",
    "brotli",
] }
dotenvy = "0.15.7"
futures = "0.3.32"
regex-lite = "0.1.9"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
too-many-lines = "allow"
struct_excessive_bools = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"
